fixed loading circle align center.

--- a/app/components/detail/detail.css
+++ b/app/components/detail/detail.css
@@ -37,7 +37,7 @@
   display: inline-block;
 }
 .detail .row {
-  margin-left: 0px;
+  margin-left: 7%;
   margin-right: 0px;
   margin-bottom: 0px;
   margin-top: 0px;
